--- a/tox.ini
+++ b/tox.ini
@@ -20,6 +20,7 @@ commands =
     bash -c "cp -r colander_data_converter/converters/misp/definitions/* ${VIRTUAL_ENV}/lib/python3.*/site-packages/pymisp/data/misp-objects/objects/"
     coverage run -m pytest --doctest-modules --md-report --md-report-verbose=0 --md-report-output test-report.md
     bash -c "coverage report --format=markdown | tee test-coverage.md"
+    bash -c "coverage xml"
 
 [testenv:fix]
 description = format the code base to adhere to our styles, and complain about what we cannot do automatically
