--- a/colander_data_converter/converters/misp/data/observable_misp_mapping.json
+++ b/colander_data_converter/converters/misp/data/observable_misp_mapping.json
@@ -76,8 +76,9 @@
     "misp_definition": "https://github.com/MISP/misp-objects/blob/main/schema_objects.json",
     "misp_colander_mapping": {
       "discriminator": {
-        "type": "regex",
-        "field": "value"
+        "type": "suggest",
+        "property": "value",
+        "target":"self"
       }
     },
     "colander_misp_mapping": {
@@ -95,8 +96,9 @@
     "misp_definition": "https://github.com/MISP/misp-objects/blob/main/schema_objects.json",
     "misp_colander_mapping": {
       "discriminator": {
-        "type": "regex",
-        "field": "value"
+        "type": "suggest",
+        "property": "value",
+        "target": "self"
       }
     },
     "colander_misp_mapping": {
