--- a/colander_data_converter/converters/misp/data/device_misp_mapping.json
+++ b/colander_data_converter/converters/misp/data/device_misp_mapping.json
@@ -5,8 +5,10 @@
     "misp_definition": "https://github.com/MISP/misp-objects/blob/main/objects/device/definition.json",
     "misp_colander_mapping": {
       "discriminator": {
-        "type": "field",
-        "field": "device-type"
+        "type": "match",
+        "property": "device-type",
+        "target":"attribute-value",
+        "value": "PC"
       }
     },
     "colander_misp_mapping": {
@@ -28,8 +30,10 @@
     "misp_definition": "https://github.com/MISP/misp-objects/blob/main/objects/device/definition.json",
     "misp_colander_mapping": {
       "discriminator": {
-        "type": "field",
-        "field": "device-type"
+        "type": "match",
+        "property": "device-type",
+        "target": "attribute-value",
+        "value": "Other"
       }
     },
     "colander_misp_mapping": {
@@ -51,8 +55,10 @@
     "misp_definition": "https://github.com/MISP/misp-objects/blob/main/objects/device/definition.json",
     "misp_colander_mapping": {
       "discriminator": {
-        "type": "field",
-        "field": "device-type"
+        "type": "match",
+        "property": "device-type",
+        "target": "attribute-value",
+        "value": "IoT"
       }
     },
     "colander_misp_mapping": {
@@ -74,8 +80,10 @@
     "misp_definition": "https://github.com/MISP/misp-objects/blob/main/objects/device/definition.json",
     "misp_colander_mapping": {
       "discriminator": {
-        "type": "field",
-        "field": "device-type"
+        "type": "match",
+        "property": "device-type",
+        "target": "attribute-value",
+        "value": "Laptop"
       }
     },
     "colander_misp_mapping": {
@@ -97,8 +105,10 @@
     "misp_definition": "https://github.com/MISP/misp-objects/blob/main/objects/device/definition.json",
     "misp_colander_mapping": {
       "discriminator": {
-        "type": "field",
-        "field": "device-type"
+        "type": "match",
+        "property": "device-type",
+        "target": "attribute-value",
+        "value": "Mobile"
       }
     },
     "colander_misp_mapping": {
@@ -120,8 +130,10 @@
     "misp_definition": "https://github.com/MISP/misp-objects/blob/main/objects/device/definition.json",
     "misp_colander_mapping": {
       "discriminator": {
-        "type": "field",
-        "field": "device-type"
+        "type": "match",
+        "property": "device-type",
+        "target": "attribute-value",
+        "value": "Router"
       }
     },
     "colander_misp_mapping": {
@@ -143,8 +155,10 @@
     "misp_definition": "https://github.com/MISP/misp-objects/blob/main/objects/device/definition.json",
     "misp_colander_mapping": {
       "discriminator": {
-        "type": "field",
-        "field": "device-type"
+        "type": "match",
+        "property": "device-type",
+        "target": "attribute-value",
+        "value": "Server"
       }
     },
     "colander_misp_mapping": {
