--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,9 +22,11 @@ classifiers = [
 ]
 dynamic = [ "version" ]
 dependencies = [
+  "docutils-stubs==0.0.22",
   "jinja2==3.1.6",
   "pydantic==2.11.7",
   "pymisp>=2.5.17",
+  "types-docutils==0.22.1.20250923",
 ]
 
 urls.discord = "https://discord.gg/qGX73GYNdp"
