--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,18 +1,18 @@
-name: Run tests
+name: Build Python distribution
 
 on:
   push:
     branches:
       - main
-      - "[0-9]+.[0-9]+.x"
+      - "*.*.*"
       - "test-me-*"
     tags:
-      - "[0-9]+.[0-9]+.[0-9]+*"
+      - "*.*.*"
 
   pull_request:
     branches:
       - main
-      - "[0-9]+.[0-9]+.x"
+      - "*.*.*"
     types:
       - opened  # default
       - synchronize  # default
@@ -41,7 +41,6 @@ jobs:
           - "fix"
           - "3.12"
           - "3.13"
-
     steps:
       - uses: actions/checkout@v5
       - name: Install uv
@@ -81,6 +80,7 @@ jobs:
         uses: codecov/codecov-action@v5
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
+
   doc:
     needs:
       - build
@@ -88,7 +88,6 @@ jobs:
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
-
     steps:
       - uses: actions/checkout@v5
       - name: Install uv
@@ -111,3 +110,26 @@ jobs:
       - name: Publish documentation on GitHub Pages
         uses: actions/deploy-pages@v4
         id: deployment
+
+  release:
+    name: Publish Python 🐍 distribution 📦 to PyPI
+    if: ${{ startsWith(github.ref, 'refs/tags/') }}
+    needs:
+      - doc
+    runs-on: ubuntu-latest
+    environment:
+      name: pypi
+      url: https://pypi.org/p/colander-data-converter
+    steps:
+      - uses: actions/checkout@v5
+      - name: Install uv
+        uses: astral-sh/setup-uv@v6
+        with:
+          version: "0.7.16"
+          python-version: "3.13"
+          enable-cache: true
+          cache-dependency-glob: "pyproject.toml"
+      - name: Build
+        run: uv build
+      - name: Publish
+        run: uv publish
